# bakr

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  connect_polygon_with_holes.cpp  polygon_construction_comb.cpp  triangulation.cpp
include/: bakr.h
include/bakr/: construct_geometry.h  intpoint.h  partition.h  polygon_with_holes.h  predicates.h  predicates_vertex.h  transformation.h  triangulation_earclipping.h  typedefs.h  vertex.h
perf/: CMakeLists.txt  is_in_cone.cpp  triangulation.cpp
src/: construct_geometry.cpp  intpoint.cpp  polygon_with_holes.cpp  predicates.cpp  predicates_vertex.cpp  transformation.cpp  triangulation.cpp  triangulation_earclipping.cpp  vertex.cpp
tests/: CMakeLists.txt  test_is_in_cone.cpp  test_predicate_between.cpp  test_predicates_orientation.cpp  test_transformation.cpp
